# github-issue-analysis

./: .containerignore  .env.example  .gitignore  .ruff.toml  CLAUDE.md  Containerfile  README.md  gh_analysis  pyproject.toml  test_cli.py
.claude/: settings.json
.claude/commands/: create-pr.md  plan-task.md  start-task.md
.claude/hooks/: python_quality_check.sh
.github/workflows/: container-release.yml  publish.yml  test-mcp-integration.yml  test.yml
docs/: README.md  agent-guide.md  api-reference.md  architecture.md  cli-standards.md  data-schemas.md  development.md  label-updates-guide.md  recommendation-cli-reference.md  recommendation-workflow.md  reprocessing-workflow.md
gh_analysis/ai/: __init__.py  analysis.py  image_utils.py  mcp_server.py  models.py  prompts.py
gh_analysis/cli/: batch.py  collect.py  main.py  options.py  process.py
gh_analysis/github_client/: __init__.py  client.py  search.py
gh_analysis/recommendation/: status_tracker.py
gh_analysis/runners/: __init__.py
gh_analysis/slack/: __init__.py  client.py  config.py
gh_analysis/storage/: __init__.py
github_issue_analysis/: __init__.py
github_issue_analysis/ai/: __init__.py  agents.py  analysis.py  capabilities.py  change_detector.py  comment_generator.py  config.py  image_utils.py  interactive.py  mcp_server.py  models.py  processors.py  prompts.py  pydantic_ai_patch.py  settings_validator.py  troubleshooting_agents.py
github_issue_analysis/cli/: batch.py  collect.py  export.py  main.py  options.py  process.py  recommendations.py  update.py
github_issue_analysis/github_client/: attachments.py  client.py  models.py  search.py
github_issue_analysis/recommendation/: __init__.py  manager.py  models.py  review_session.py
github_issue_analysis/runners/: __init__.py
github_issue_analysis/slack/: client.py  config.py
github_issue_analysis/storage/: manager.py
github_issue_analysis/utils/: date_parser.py
scripts/: container-entrypoint.sh  test-container-examples.sh  test-container-functional.sh  test-container-mcp.sh
tasks/: add-gpt5-troubleshoot-models.md  add-slack-notifications.md  adjust-black-auto-corrections.md  ai-batch-processing-phase1-basic.md  ai-batch-processing-phase2-duckdb-selection.md  ai-batch-processing-phase3-pipeline-integration.md  ai-product-labeling-phase1.md  ai-product-labeling-phase2.md  ai-product-labeling.md  ai-simplification-phase1-agents.md  ai-simplification-phase2-cli.md  ai-simplification-phase3-batch.md  ai-simplification-phase4-cleanup.md  ai-simplification-phase5-documentation.md  automatic-batch-splitting-multi-batch-importing.md  batch-cancel-remove-operations.md  clarify-confidence-scores.md  cli-review-and-normalization.md  code-cleanup-phase1.md  containerized-cli-parallel-processing.md  date-range-collection.md  duckdb-integration-phase1-foundation.md  duckdb-integration-phase2-ai-processing.md  duckdb-integration-phase3-issue-sync.md  fix-ci-container-build.md  fix-thinking-flags-and-remove-o1-mini.md  fix-union-instantiation-error.md  github-attachment-collection.md  github-issue-collection.md  github-issue-label-updates.md  migrate-to-runner-pattern.md  open-source-repository-sanitization.md  recommendation-management-system-phase2.md  recommendation-management-system.md  repository-exclusion-for-org-collection.md  storage-querying-system.md  streaming-attachment-downloads.md  template.md  thinking-models-support.md  troubleshoot-interactive-mode.md
tasks/archive/: adjust-black-auto-corrections.md  ai-batch-processing-phase1-basic.md  ai-product-labeling-phase1.md  ai-product-labeling-phase2.md  ai-simplification-phase1-agents.md  ai-simplification-phase2-cli.md  ai-simplification-phase4-cleanup.md  batch-cancel-remove-operations.md  date-range-collection.md  fix-aggressive-comment-filtering.md  fix-thinking-flags-and-remove-o1-mini.md  github-attachment-collection.md  github-issue-collection.md  github-issue-label-updates.md  repository-exclusion-for-org-collection.md  single-issue-collection.md  thinking-models-support.md
tests/: conftest.py  mcp_functional_check.py  mcp_integration_check.py  test_container_functional.py  test_entry_point.py  test_troubleshoot_functional.py  test_troubleshooting_functional.py  test_troubleshooting_interactive.py  test_troubleshooting_schema_validation.py
tests/test_ai/: __init__.py  test_agents.py  test_batch.py  test_change_detector.py  test_change_detector_status.py  test_comment_generator.py  test_image_processing.py  test_processors.py  test_settings_validator.py  test_thinking_models.py
tests/test_cli/: test_batch.py  test_collect.py  test_collect_dates.py  test_main.py  test_option_consistency.py  test_process.py  test_process_validation.py  test_recommendations.py  test_thinking_validation.py  test_update.py
tests/test_container/: test_build.py  test_entrypoint.py
tests/test_github_client/: __init__.py  test_attachments.py  test_client.py  test_label_updates.py  test_models.py  test_search.py  test_search_dates.py
tests/test_recommendation/: test_manager.py  (+3 more)
(+66 files in other folders)
