[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-issue-analysis"
version = "0.1.2"
description = "GitHub issue collection and AI-powered analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-ai>=0.4.0",
    "httpx>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "pygithub>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0", 
    "pytest-mock>=3.14.1",
    "ruff>=0.12.1",
    "mypy>=1.16.1",
    "pre-commit>=3.0.0",
]
export = [
    "pyyaml>=6.0.0",
]

[project.scripts]
github-analysis = "github_issue_analysis.cli.main:app"

[tool.hatchling.build.targets.wheel]
packages = ["github_issue_analysis"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
# Ruff's formatter (replaces Black)
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["trees"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["trees/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true


